Modified gallery logic to call postrelease start. Added margin on the bottom of the ad above to ensure they arent too close together.

--- a/app/elements/cranberry-gallery/cranberry-gallery.css
+++ b/app/elements/cranberry-gallery/cranberry-gallery.css
@@ -169,3 +169,7 @@ div.loading-container {
   @apply(--layout-center-justified);
   height: 85vh;
 }
+
+google-dfp.right-rail-dfp {
+  margin-bottom: 24px;
+}
